fix(modals): Adjusted structure for modal header on mobile

--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -144,8 +144,23 @@
             padding: 0;
         }
 
+        .modal-header-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 2;
+            display: flex;
+            width: 100%;
+            height: 64px;
+            background-color: $white;
+        }
+
+        .modal-header {
+            padding: 20px 16px;
+        }
+
         .modal-content {
-            padding-bottom: 60px;
+            margin: 60px 0;
         }
 
         .modal-dialog {
@@ -155,9 +170,9 @@
         }
 
         .modal-close-button {
-            top: initial;
+            top: 0;
             right: 10px;
-            line-height: 0;
+            padding: 20px 0;
         }
 
         .modal-actions {
